# ChangeLog for net-libs/raknet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> raknet-3.07.ebuild:
  Changed dependency from dev-db/libpq to virtual/postgresql-base

  22 Mar 2008; Renaud Chaput (renchap) <renchap@cocoa-x.com>
  -raknet-3.06.ebuild, +raknet-3.07.ebuild:
  Version bump to 3.07, removing old version

  11 Mar 2008; Renaud Chaput (renchap) <renchap@cocoa-x.com>
  raknet-3.06.ebuild:
  econf dies by default (thanks to tcunha)

  11 Mar 2008; Renaud Chaput (renchap) <renchap@cocoa-x.com>
  -raknet-3.05.ebuild, raknet-3.06.ebuild:
  Removing old version, adding ChangeLog entry for previous commit, and
  cleaning up ebuild

  11 Mar 2008; Renaud Chaput (renchap) <renchap@cocoa-x.com>
  +raknet-3.06.ebuild:
  Version bump to 3.06

  10 Mar 2008; Markus Ullmann <jokey@gentoo.org> raknet-3.045, raknet-3.05:
  Drop old and some cleanups

  08 Mar 2008; (Tommy[D]) tommy100@gmx.de -raknet-3.011.ebuild:
  Drop old version

  07 Mar 2008; Renaud Chaput (renchap) <renchap@cocoa-x.com>
  +raknet-3.05.ebuild:
  Version bump to 3.05

  03 Mar 2008; Renaud Chaput (renchap) <renchap@cocoa-x.com>
  +raknet-3.045.ebuild:
  Version bump to 3.045

  02 Feb 2008; (Tommy[D]) tommy100@gmx.de -raknet-2.521.ebuild,
  raknet-3.011.ebuild:
  Drop autotools.eclass, simplify SRC_URI and drop old version

  31 Jan 2008; Renaud Chaput (renchap) <renchap@cocoa-x.com>
  +raknet-3.011.ebuild:
  Ebuild for RakNet 3.011

  24 Jun 2007; Jakub Moc <jakub@gentoo.org> raknet-2.521.ebuild:
  Fix multilib handling

  07 Mar 2007; Jakub Moc <jakub@gentoo.org> raknet-2.521.ebuild:
  Remove USE=doc, quoting

  06 Mar 2007; Patrick Zimmermann (moHiJ) <patrick@zakweb.de>
  +raknet-2.521.ebuild, +files/raknet-2.521-gentoo.diff, +metadata.xml:
  New ebuild for bug 164721 thanks to Renaud Chaput
