@@ -1,5 +1,5 @@
 AUX raknet-2.521-gentoo.diff 1972 RMD160 93c8e972c992da7194ec71d330fd74995006c61b SHA1 355a55f2213da5456bb478feec87931c6c1f491d SHA256 9bc25397669c2f4b71c8029b2c20b101ba6036388eba815b630141c45de6b673
 DIST raknet-3.07.tar.gz 5658583 RMD160 c41a2c725c6c00a9edaf494e3205151a99b76c90 SHA1 f4956ec952536f88d9f82d8d9f69eb1cabd53cd6 SHA256 65f155a7e69dd188c772bd8d445ab893f464af4ec5695b41163f818a456fa77b
 EBUILD raknet-3.07.ebuild 818 RMD160 060cf96ab58230ace1406eb5cb0f106f2ab22d48 SHA1 c901194c7519381bc4ad00fef08471b89696374e SHA256 130aa5072aa836b8f6b66d3c2633d02c9a1e5d4dee9b4b4355940dc73081a4af
-MISC ChangeLog 1880 RMD160 f272241f14c2df2c70017b326bffe36eea950c7d SHA1 3b92254ae99d45bf6560dd9a9617ec6d238cab6f SHA256 4496aed277a5f765a75830a96f84e6d516b24f53ac54d3df7466f4834cb0f7e6
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 2001 RMD160 d67a2f278505dd5e48bcb5dc3808c1bf7ee0e3ab SHA1 47aff42588700a4eee5e325b4cdd8a6a7422b732 SHA256 7af376942446ea6faa09c8a8afdd8118ac4a04fafe28de201f6a5c731382c0d1
+MISC metadata.xml 327 RMD160 7c53e8437144c868dae8dff2eb3e1b2d2ad131d3 SHA1 3aa1bd9c6a45880aace310f0a4dd669190afeabf SHA256 be9adbc5dbc8f5ed2529841c6d69c898aa553d89a1f51c7224652cf42421e014
