@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>maintainer-wanted</herd>
+	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='autopatcher'> Enable RakNet autopatcher 
+			support </flag>
+		<flag name='rakvoice'> Enable RakNet RakVoice module 
+			</flag>
+	</use>
 </pkgmetadata>
